# cmake-testing

./: CMakeLists.txt
cmake/: FindCurses.cmake
src/: main.c
